# drone_monitoring

./: README.md
3dr_solo_control/: README.html  README.md  kill.sh  start_flight_sim.sh
3dr_solo_control/src/quadrocopter_control/: CMakeLists.txt  package.xml
3dr_solo_control/src/quadrocopter_control/src/: auPX4.cpp  auPX4.h  quadrocopter_control_node.cpp
3dr_solo_control/src/quadrocopter_joystick_driver/: CMakeLists.txt  Joystick.cpp  Joystick.h  main.cpp  package.xml
3dr_solo_control/src/quadrocopter_joystick_driver/msg/: joystick_data.msg
decision_support_system/: README.md
decision_support_system/version 1/: auth.json
decision_support_system/version 2/: IOperator.py  Operator.py  README.md  ROSHelper.py  Tests.py
neural_network/decision_support_system/version 1/: EventGenerator.py  Manager.py  README.md  bot4.py
neural_network/decision_support_system/version 2/: config.json
neural_network/irmodel/fire_detection_model/FP16/: frozen_inference_graph.mapping  frozen_inference_graph.xml
neural_network/irmodel/fire_detection_model/FP32/: frozen_inference_graph.mapping  frozen_inference_graph.xml
neural_network/irmodel/orig/: frozen_inference_graph.mapping  frozen_inference_graph.xml
neural_network/scripts/: IOperator.py  Operator.py  README.md  ssd_detector.py  ssd_detector_extract.py  ssd_detector_extract_writing.py  ssd_detector_writing.py  tiny-yolov3_extract.py  tiny-yolov3_extract_with_writing.py
simulation/: README.md  full_installation.sh  start_flight_sim.sh
simulation/blender_models/: README.md
simulation/blender_models/low_poly_tree_1/: low_poly_tree_1.blend
simulation/blender_models/low_poly_tree_2/: low_poly_tree_2.blend
simulation/gazebo_models/: README.md  gazebo.sh
simulation/gazebo_models/birch_tree/: model.config  model.sdf
simulation/gazebo_models/brich_tree_2/: model.config  model.sdf
simulation/gazebo_models/brich_tree_2/meshes/: birch_tree_2.dae
simulation/gazebo_models/fire_camp/: model.config  model.sdf
simulation/gazebo_models/fire_camp/meshes/: fire_new.dae
simulation/gazebo_models/grass_plane/: model.sdf
simulation/gazebo_models/tree/: model.config  model.sdf
simulation/gazebo_models/tree2/: model.config  model.sdf
simulation/gazebo_models/worlds/: iris_opt_flow.world
simulation/iris_control/: CMakeLists.txt  README.md  package.xml
simulation/iris_control/include/: Quadrocopter.h
simulation/iris_control/src/: Quadrocopter.cpp  joy_control.cpp  main.cpp
(+3 files in other folders)
