<?xml version="1.0"?>
<package format="2">

  <name>drone_control</name>
  <version>0.0.0</version>
  <description>The test_flight package</description>
  <maintainer email="a.zenkin@corp.ifmo.ru">art</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export></export>

</package>
